Correção da navegação entre paginas

--- a/src/QuemSomos.html
+++ b/src/QuemSomos.html
@@ -26,7 +26,8 @@
 
                 <!--Opções-->
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-outline-light">Início</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Inicial.html'">Início</button>
                     <button type="button" class="btn btn-outline-light"
                         onclick="window.location.href = 'Agendamento.html'">Agendar</button>
                     <button type="button" class="btn btn-outline-light"
