--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -26,7 +26,7 @@
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+        <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -207,7 +207,7 @@
     <!--Finalizar-->
     <div class="row container-fluid justify-content-center">
       <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
-        <h4>Finalizar</h4>
+        <h4>Finalizar Agendamento</h4>
 
         <div class="d-flex justify-content-center">
           <div class="form-check form-switch" style="width: 15rem;">
@@ -217,9 +217,9 @@
           </div>
         </div>
 
-        <button class="btn btn-light border mb-2" style="width: 10rem;" type="button"
+        <button class="btn btn-outline-primary mb-2" style="width: 10rem;" type="button"
           onclick="finalizar()">Finalizar</button>
-        <button class="casd btn btn-light border mb-2" style="width: 10rem;" type="button">Cancelar</button>
+        <button class="casd btn btn-outline-danger mb-2" style="width: 10rem;" type="button">Cancelar</button>
       </div>
     </div>
 
