--- a/src/Avaliacao.html
+++ b/src/Avaliacao.html
@@ -25,7 +25,7 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
                 <!--Opções-->
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -72,7 +72,7 @@
 
                 <!--Finalizar-->
                 <div class="row container-fluid justify-content-end mb-4">
-                    <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Finalizar</button>
+                    <button class="btn btn-outline-info mb-2" style="width: 10rem;" type="button">Finalizar</button>
                 </div>
             </div>
         </div>
