--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
                 <!--Opções-->
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -46,7 +46,7 @@
         <div class="row container-fluid justify-content-center my-4">
 
             <div class="border rounded me-3 my-3 text-center" style="width: 94%;">
-                <h4 class="mt-2">Dados do Usuario</h4>
+                <h4 class="mt-2">Dados do Usuário</h4>
             </div>
 
             <div class="col-11 col-lg-3 mx-2 mt-2 border rounded justify-content-center text-center">
