--- a/src/Login.html
+++ b/src/Login.html
@@ -25,14 +25,18 @@
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width:80%;"></a>
+        <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-outline-light">Início</button>
-          <button type="button" class="btn btn-outline-light">Perfil</button>
-          <button type="button" class="btn btn-outline-light">Agendar</button>
-          <button type="button" class="btn btn-outline-light" disabled>Login</button>
+          <button type="button" class="btn btn-outline-light"
+          onclick="window.location.href = 'Inicial.html'">Início</button>
+          <button type="button" class="btn btn-outline-light"
+          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          <button type="button" class="btn btn-outline-light"
+          onclick="window.location.href = 'Login.html'">Login</button>
+          <button type="button" class="btn btn-outline-light"
+            onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
 
       </div>
@@ -86,7 +90,7 @@
                 <button type="button" class="btn btn-outline-dark">Esqueci a senha</button>
 
                 <br>ㅤ </br>
-                <div class=" row d-flex justify-content-center align-content-center "> <a href="http://127.0.0.1:5500/pco-si-2023-1-p1-proj-web-t1-grupo-3-lavadrive/src/Agendamento.html"
+                <div class=" row d-flex justify-content-center align-content-center "> <a href="Agendamento.html"
                     class="btn btn-outline-dark col-4">Entrar</a> </div>
 
 
@@ -144,10 +148,10 @@
           <li>
             <p>Outros links úteis</p>
           </li>
-          <li><a href="#" class="info">Quem somos</a></li>
-          <li><a href="#" class="info">Ajuda</a></li>
-          <li><a href="#" class="info">Dúvidas frequentes</a></li>
-          <li><a href="#" class="info">Termos de privacidade</a></li>
+          <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+          <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
         </ul>
       </div>
 
