--- a/src/DúvidasAjuda.html
+++ b/src/DúvidasAjuda.html
@@ -23,16 +23,18 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
                 <!--Opções-->
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-outline-light">Início</button>
-                    <button type="button" class="btn btn-outline-light">Perfil</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Inicial.html'">Início</button>
                     <button type="button" class="btn btn-outline-light"
                         onclick="window.location.href = 'Agendamento.html'">Agendar</button>
                     <button type="button" class="btn btn-outline-light"
                         onclick="window.location.href = 'Login.html'">Login</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Perfil.html'">Perfil</button>
                 </div>
 
             </div>
