--- a/src/QuemSomos.html
+++ b/src/QuemSomos.html
@@ -22,7 +22,7 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
                 <!--Opções-->
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
