--- a/src/TrocarSenha.html
+++ b/src/TrocarSenha.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil do Usuário</title>
+    <title>Recuperação de Senha</title>
 
     <!--Style CSS-->
     <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
@@ -13,6 +13,25 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
+    <style>
+        .main-content {
+            padding: 3rem;
+            margin-top: 3rem;
+        }
+
+        .bordered-div {
+            border: 1px solid #ccc;
+            padding: 2rem;
+            border-radius: 5px;
+        }
+
+        @media (max-width: 576px) {
+            .main-content {
+                padding: 1.5rem;
+                margin-top: 1.5rem;
+            }
+        }
+    </style>
 
 </head>
 
@@ -23,18 +42,18 @@
             <div class="container-fluid">
 
                 <!--Logo-->
-                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
                 <!--Opções-->
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-outline-light">Início</button>
                     <button type="button" class="btn btn-outline-light"
-                        onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+                    onclick="window.location.href = 'Inicial.html'">Início</button>
                     <button type="button" class="btn btn-outline-light"
-                        onclick="window.location.href = 'Login.html'">Login</button>
-                    <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Perfil.html'"
-                        disabled>Perfil</button>
-                </div>
+                    onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+                    <button type="button" class="btn btn-outline-light"
+                    onclick="window.location.href = 'Login.html'">Login</button>
+                    <button type="button" class="btn btn-outline-light"
+                      onclick="window.location.href = 'Perfil.html'">Perfil</button>
 
             </div>
         </nav>
@@ -42,69 +61,46 @@
     </header>
 
     <!--Conteudos-->
-    <main class="m-0 d-block">
-        <div class="row container-fluid justify-content-center my-4">
-
-            <div class="border rounded me-3 my-3 text-center" style="width: 94%;">
-                <h4 class="mt-2">Dados do Usuário</h4>
+    <main class="m-0 d-block main-content">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <h2 class="text-center">Alterar a Senha</h2>
+                </div>
             </div>
-
-            <div class="col-11 col-lg-3 mx-2 mt-2 border rounded justify-content-center text-center">
-                <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="opcoes(1)"
-                    checked>
-                <label class="btn btn-light border mt-4" for="option1" style="width: 80%;">Meus dados</label>
-
-                <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off"
-                    onclick="opcoes(2)">
-                <label class="btn btn-light border mt-4" for="option2" style="width: 80%;">Veiculo</label>
-
-                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off"
-                    onclick="opcoes(3)">
-                <label class="btn btn-light border mt-4" for="option3" style="width: 80%;">Historico</label>
-
-                <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off"
-                    onclick="opcoes(4)">
-                <label class="btn btn-light border my-4" for="option4" style="width: 80%;">Excluir conta</label>
-
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6 bordered-div">
+                    <div class="text-center mb-4">
+                        <img src="img/AvatarPadrão.png" class="rounded-circle" style="width: 30%"
+                            alt="Imagem de perfil">
+                    </div>
+                    <form>
+                        <div class="form-group mb-3">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu email">
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="old-password">Senha antiga:</label>
+                            <input type="password" class="form-control" id="old-password"
+                                placeholder="Digite sua senha antiga">
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="new-password">Nova senha:</label>
+                            <input type="password" class="form-control" id="new-password"
+                                placeholder="Digite sua nova senha">
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="confirm-password">Confirme a nova senha:</label>
+                            <input type="password" class="form-control" id="confirm-password"
+                                placeholder="Confirme sua nova senha">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Trocar Senha</button>
+                    </form>
+                </div>
             </div>
-
-
-            <div id="tela" class="col-11 col-lg-8 mx-4 mt-2 border rounded text-center">
-                <img src="img/circulo cinza.png" style="width: 30%;">
-
-                <div class="d-flex justify-content-center my-3">
-                    <input class="form-control text-center border-secondary" type="search" placeholder="Nome"
-                        aria-label="Search" style="width: 20rem;">
-                </div>
-
-                <div class="d-flex justify-content-center my-3">
-                    <input class="form-control text-center border-secondary" type="search" placeholder="Nome de Usuario"
-                        aria-label="Search" style="width: 20rem;">
-                </div>
-
-                <div class="d-flex justify-content-center my-3">
-                    <input class="form-control text-center border-secondary" type="search" placeholder="E-mail"
-                        aria-label="Search" style="width: 20rem;">
-                </div>
-
-                <div class="d-flex justify-content-center my-3">
-                    <input class="form-control text-center border-secondary" type="search" placeholder="Telefone"
-                        aria-label="Search" style="width: 20rem;">
-                </div>
-
-                <div class="d-flex justify-content-center my-3">
-                    <input type="radio" class="btn-check" name="options" id="trocarSenha" autocomplete="off">
-                    <label class="btn btn-light border mt-4 me-3" for="trocarSenha" onclick="window.location.href = 'TrocarSenha.html'" style="width: 8rem;">Trocar
-                        senha</label>
-
-                    <input type="radio" class="btn-check" name="options" id="salvar" autocomplete="off" disabled>
-                    <label class="btn btn-light border mt-4 ms-3" for="salvar" style="width: 8rem;">Salvar</label>
-                </div>
-
-            </div>
-
         </div>
     </main>
+
 
     <!--Rodape-->
     <footer class="m-0 p-0 d-block text-white container-fluid">
@@ -112,7 +108,7 @@
         <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
             <!--Metodos de pagamento-->
-            <div class="col-12 col-lg-4">
+            <div class="col-12 col-lg-4 ">
                 <ul class="payList">
                     <li>
                         <p>Métodos de pagamento</p>
@@ -165,8 +161,6 @@
         </div>
 
     </footer>
-
-    <script src="Scripts/Perfil.js"></script>
 
     <!--Bootstrap (Java)-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
