--- a/src/Pagamento.html
+++ b/src/Pagamento.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pagina de pagamento</title>
+  <title>Página de pagamento</title>
 
   <!--Style CSS-->
   <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
