--- a/src/Inicial.html
+++ b/src/Inicial.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Template Lava Drive</title>
+  <title>LavaDrive</title>
   <!--Style CSS-->
   <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
   <!--Bootstrap (CSS)-->
