--- a/src/Login.html
+++ b/src/Login.html
@@ -19,20 +19,23 @@
 
 <body>
   <!--Cabecalho-->
-
   <header class="m-0 d-block bg-blue">
     <nav class="navbar">
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width:80%;"></a>
+        <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-outline-light">Início</button>
-          <button type="button" class="btn btn-outline-light">Perfil</button>
-          <button type="button" class="btn btn-outline-light">Agendar</button>
-          <button type="button" class="btn btn-outline-light" disabled>Login</button>
+          <button type="button" class="btn btn-outline-light"
+          onclick="window.location.href = 'Inicial.html'">Início</button>
+          <button type="button" class="btn btn-outline-light"
+          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          <button type="button" class="btn btn-outline-light"
+          onclick="window.location.href = 'Login.html'" disabled>Login</button>
+          <button type="button" class="btn btn-outline-light"
+            onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
 
       </div>
@@ -144,10 +147,10 @@
           <li>
             <p>Outros links úteis</p>
           </li>
-          <li><a href="#" class="info">Quem somos</a></li>
-          <li><a href="#" class="info">Ajuda</a></li>
-          <li><a href="#" class="info">Dúvidas frequentes</a></li>
-          <li><a href="#" class="info">Termos de privacidade</a></li>
+          <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+          <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
         </ul>
       </div>
 
