Botão de cadastro e correção de erros ortográficos

--- a/src/Login.html
+++ b/src/Login.html
@@ -87,6 +87,7 @@
 
 
                 <button type="button" class="btn btn-outline-dark" onclick="window.location.href='RecuperarSenha.html'">Esqueci a senha</button>
+                <button type="button" class="btn btn-outline-dark" onclick="window.location.href='CadastroUsuário.html'">Cadastrar-se</button>
 
                 <br> </br>
                 <div class=" row d-flex justify-content-center align-content-center "> <a href="http://127.0.0.1:5500/pco-si-2023-1-p1-proj-web-t1-grupo-3-lavadrive/src/Agendamento.html"
