--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -57,11 +57,11 @@
 
                 <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off"
                     onclick="opcoes(2)">
-                <label class="btn btn-light border mt-4" for="option2" style="width: 80%;">Veiculo</label>
+                <label class="btn btn-light border mt-4" for="option2" style="width: 80%;">Veículo</label>
 
                 <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off"
                     onclick="opcoes(3)">
-                <label class="btn btn-light border mt-4" for="option3" style="width: 80%;">Historico</label>
+                <label class="btn btn-light border mt-4" for="option3" style="width: 80%;">Histórico</label>
 
                 <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off"
                     onclick="opcoes(4)">
