--- a/src/termosdeprivacidade.html
+++ b/src/termosdeprivacidade.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template Lava Drive</title>
+  <title>Termos LavaDrive</title>
 
   <!--Style CSS-->
   <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
