--- a/src/QuemSomos.html
+++ b/src/QuemSomos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template Lava Drive</title>
+    <title>Quem somos?</title>
 
     <!--Style CSS-->
     <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
