adicionando botões responsivos

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LavaDrive</title>
+  <title>LavaDrive - Pagina Inicial</title>
   <!--Style CSS-->
   <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
   <!--Bootstrap (CSS)-->
@@ -96,8 +96,21 @@
         <div class="card" style="width: 12rem; height: 23rem; border-color: #311abb; margin-left: 12px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3967/3967132.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text" style="color: #000000; font-size: small; ">Ao agendar pelo Lavadrive, você pode economizar tempo valioso, evitando filas e esperas desnecessárias. <a href="Agendamento.html ">Clique aqui</a> para agendar! </p>
+                <p class="card-text" style="color: #000000; font-size: small; ">Ao agendar pelo site do Lavadrive, você pode economizar tempo valioso, evitando filas e esperas desnecessárias. <a href="Agendamento.html ">Clique aqui</a> para agendar! </p>
             </div>
+        </div>
+        <div class="card text-center">
+          <div class="card-header">
+            Featured
+          </div>
+          <div class="card-body">
+            <h5 class="card-title" style="color: black;">Deseja se tornar um cliente?</h5>
+            <p class="card-text" style="color: #000000;">Clique no botão abaixo para criar seu perfil e ter acesso a todas as promoções e ficar por dentro de tudo que o site disponibiliza para você!</p>
+            <a href="Perfil.html" class="btn btn-primary">Crie sua conta</a>
+          </div>
+          <div class="card-footer text-body-secondary">
+            
+          </div>
         </div>
         </div>
       </div>
