alterando pagina inicial

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
   <!--Conteudos-->
   <main class="m-0 d-block bg-image">
     <div class="content text-white" style="top: 10px; left: 10px; transform: none;">
-      <h1 style="font-size: 36px; font-weight: bold; color: #311abb; ">SOLUÇÕES EM LIMPEZA E ESTÉTICA AUTOMOTIVA</h1>
+      <h1 style="font-size: 36px; font-weight: bold; color: #171718; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; ">SOLUÇÕES EM LIMPEZA E ESTÉTICA AUTOMOTIVA</h1>
       <div style="text-align:center">
         <span class="dot"></span>
         <span class="dot"></span>
@@ -86,14 +86,14 @@
               </div>
             </div>
           </div>
-          <div class="card" style="width: 12rem; height: 23rem; border-color:#311abb; margin-right: 12px;">
+          <div class="card" style="width: 12rem; height: 35rem; border-color:#2a2a2b; margin-right: 12px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3554/3554364.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #000000; font-size:small;">No Lavadrive, o comprometimento é a essência de nosso negócio. Nossa equipe está empenhada em fornecer serviços de lavagem excepcionais. </p>
             </div>
         </div>
         
-        <div class="card" style="width: 12rem; height: 23rem; border-color: #311abb; margin-left: 12px;">
+        <div class="card" style="width: 12rem; height: 35rem; border-color: #121213; margin-left: 12px;">
             <img src="https://cdn-icons-png.flaticon.com/512/3967/3967132.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text" style="color: #000000; font-size: small; ">Ao agendar pelo site do Lavadrive, você pode economizar tempo valioso, evitando filas e esperas desnecessárias. <a href="Agendamento.html ">Clique aqui</a> para agendar! </p>
@@ -101,7 +101,7 @@
         </div>
         <div class="card text-center">
           <div class="card-header">
-            Featured
+            
           </div>
           <div class="card-body">
             <h5 class="card-title" style="color: black;">Deseja se tornar um cliente?</h5>
@@ -125,11 +125,11 @@
               <li>
                 <p>Métodos de pagamento</p>
               </li>
-              <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+              <li><i class="fa-brands fa-cc-visa fs-3" style="color: white;"></i></li>
+              <li><i class="fa-brands fa-paypal fs-3" style="color: white;"></i></li>
+              <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: white;"></i></li>
+              <li><i class="fa-brands fa-pix fs-3" style="color: white;"></i></li>
+              <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: white"></i></li>
             </ul>
           </div>
 
@@ -252,11 +252,11 @@
 
 
     .bg-blue {
-      background-color: #5b37e8;
+      background-color: #3a3838;
     }
 
     .bg-darkBlue {
-      background-color: #311abb;
+      background-color: #0e0d0d;
     }
 
 
@@ -269,7 +269,7 @@
     }
 
     .info:hover {
-      color: purple;
+      color: rgb(107, 83, 107);
     }
 
     h1 {
