--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -50,38 +50,53 @@
     <div class="container-fluid row justify-content-center">
       <div class="col-lg-3 col-6 row border border-black border-2 rounded-4 m-3 p-2">
         <div class="d-flex justify-content-center text-center mt-2">
-          <select class="form-select border-info text-center" style="width: 20rem;">
-            <option selected>Categoria do Veículo</option>
-            <option value="1">Hatch</option>
-            <option value="2">Sedan</option>
-            <option value="3">SUV</option>
-            <option value="4">Picape/Caminhonete</option>
-            <option value="5">Motocicleta</option>
-            <option value="6">Outro</option>
+          <select id="inputcategoria" class="form-select border-info text-center" style="width: 20rem;">
+            <option value="nc" selected>Categoria do Veículo</option>
+            <option value="Hatch">Hatch</option>
+            <option value="Sedan">Sedan</option>
+            <option value="SUV">SUV</option>
+            <option value="Picape/Caminhonete">Picape/Caminhonete</option>
+            <option value="Motocicleta">Motocicleta</option>
+            <option value="Outro">Outro</option>
           </select>
         </div>
 
         <!--Modelo-->
         <div class="mb-3 justify-content-center">
-          <label for="exampleFormControlInput1" class="form-label">Modelo:</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Jeep Compass">
+          <label for="inputmodelo" class="form-label">Modelo:</label>
+          <input type="text" class="form-control" id="inputmodelo" placeholder="Ex.: Jeep Compass">
         </div>
 
         <!--Placa-->
         <div class="mb-3 justify-content-center">
-          <label for="exampleFormControlInput1" class="form-label">Placa:</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: ABC1C34">
+          <label for="inputplaca" class="form-label">Placa:</label>
+          <input type="text" class="form-control" id="inputplaca" placeholder="Ex.: ABC1C34">
         </div>
 
         <!--Cor-->
         <div class="mb-3 justify-content-center">
-          <label for="exampleFormControlInput1" class="form-label">Cor (Opcional):</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Branco">
+          <label for="inputcor" class="form-label">Cor (Opcional):</label>
+          <input type="text" class="form-control" id="inputcor" placeholder="Ex.: Branco">
         </div>
 
         <!--Botoes-->
         <div class="text-center">
-          <button type="button" class="mb-2 btn btn-outline-info">Adicionar</button>
+          <button type="button" class="mb-2 btn btn-outline-info" onclick="SalvarCarro()">Adicionar</button>
+        </div>
+      </div>
+
+
+      <!--Mensagem toast-->
+      <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">LavaDrive</strong>
+            <small>Agora</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            <p id="toastMensage">Mensagem</p>
+          </div>
         </div>
       </div>
     </div>
@@ -150,6 +165,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+    <!--Script que gerencia as contas e cadastros-->
+  <script src="Scripts/Usuarios.js"></script>
 </body>
 
 </html>
