--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body onload="eventPagDeCDUsuario()">
   <!--Cabecalho-->
   <header class="m-0 d-block bg-blue">
     <nav class="navbar">
@@ -50,7 +50,7 @@
       <div class="col-lg-6 col-9 border border-black border-2 justify-content-center rounded-4 m-3 p-2">
 
         <div class="text-center">
-          <img id="imgPerfil" src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
+          <img id="imgPerfil" class="rounded-circle" src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
           <p><i class="fa-solid fa-pencil"></i> Editar foto de perfil</p>
           <input type="file" id="inputImagem" accept="image/*">
         </div>
@@ -89,7 +89,7 @@
           <button type="button" class="m-2 btn btn-outline-info text-center" onclick="salvarCadastro()">Criar</button>
         </div>
 
-        <!--Mensagem de termos não aceitos-->
+        <!--Mensagem toast-->
         <div class="toast-container position-fixed bottom-0 end-0 p-3">
           <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
@@ -169,7 +169,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
   crossorigin="anonymous"></script>
-  <script src="Scripts/Contas.js"></script>
+  <!--Script que gerencia as contas e cadastros-->
+  <script src="Scripts/Usuarios.js"></script>
 </body>
 
 </html>
