Alteração das cores dos ícones de pagamento

--- a/src/Avaliacao.html
+++ b/src/Avaliacao.html
@@ -19,30 +19,30 @@
 </head>
 
 <body>
-  <!--Cabecalho-->
-  <header class="m-0 d-block bg-blue">
-    <nav class="navbar">
-      <div class="container-fluid">
+    <!--Cabecalho-->
+    <header class="m-0 d-block bg-blue">
+        <nav class="navbar">
+            <div class="container-fluid">
 
-        <!--Logo-->
-        <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
+                <!--Logo-->
+                <a href="Inicial.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
-        <!--Opções-->
-        <div class="btn-group d-flex" role="group" aria-label="Basic example">
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Inicial.html'">Início</button>
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Login.html'">Login</button>
-          <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Perfil.html'">Perfil</button>
-        </div>
+                <!--Opções-->
+                <div class="btn-group d-flex" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Inicial.html'">Início</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Login.html'">Login</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Perfil.html'">Perfil</button>
+                </div>
 
-      </div>
-    </nav>
+            </div>
+        </nav>
 
-  </header>
+    </header>
 
     <!--Conteudos-->
     <main class="m-0 d-block">
@@ -91,11 +91,11 @@
                     <li>
                         <p>Métodos de pagamento</p>
                     </li>
-                    <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+                    <li><i class="fa-brands fa-cc-visa fs-3"></i></li>
+                    <li><i class="fa-brands fa-paypal fs-3"></i></li>
+                    <li><i class="fa-brands fa-cc-mastercard fs-3"></i></li>
+                    <li><i class="fa-brands fa-pix fs-3"></i></li>
+                    <li><i class="fa-brands fa-cc-diners-club fs-3"></i></li>
                 </ul>
             </div>
 
