--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -28,11 +28,11 @@
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Inicial.html'">Início</button>
+            onclick="window.location.href = 'Inicial.html'">Início</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Login.html'" disabled>Login</button>
+            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Login.html'"
+            disabled>Login</button>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
@@ -50,7 +50,7 @@
     <div class="container-fluid row justify-content-center">
       <div class="col-lg-3 col-6 row border border-black border-2 rounded-4 m-3 p-2">
         <div class="d-flex justify-content-center text-center mt-2">
-          <select id="inputcategoria" class="form-select border-info text-center" style="width: 20rem;">
+          <select id="inputcategoria" class="form-select border-info text-center my-1" style="width: 20rem;">
             <option value="nc" selected>Categoria do Veículo</option>
             <option value="Hatch">Hatch</option>
             <option value="Sedan">Sedan</option>
@@ -109,16 +109,16 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-12 col-lg-4 ">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
           </li>
-          <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+          <li><i class="fa-brands fa-cc-visa fs-3"></i></li>
+          <li><i class="fa-brands fa-paypal fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-mastercard fs-3"></i></li>
+          <li><i class="fa-brands fa-pix fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-diners-club fs-3"></i></li>
         </ul>
       </div>
 
@@ -165,7 +165,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    <!--Script que gerencia as contas e cadastros-->
+  <!--Script que gerencia as contas e cadastros-->
   <script src="Scripts/Usuarios.js"></script>
 </body>
 
