--- a/src/Inicial.html
+++ b/src/Inicial.html
@@ -36,12 +36,12 @@
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Inicial.html'"
+            disabled>Início</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Inicial.html'" disabled>Início</button>
+            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-          <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Login.html'">Login</button>
+            onclick="window.location.href = 'Login.html'">Login</button>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
@@ -107,11 +107,11 @@
               <li>
                 <p>Métodos de pagamento</p>
               </li>
-              <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-              <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+              <li><i class="fa-brands fa-cc-visa fs-3"></i></li>
+              <li><i class="fa-brands fa-paypal fs-3"></i></li>
+              <li><i class="fa-brands fa-cc-mastercard fs-3"></i></li>
+              <li><i class="fa-brands fa-pix fs-3"></i></li>
+              <li><i class="fa-brands fa-cc-diners-club fs-3"></i></li>
             </ul>
           </div>
 
