--- a/src/Pagamento.html
+++ b/src/Pagamento.html
@@ -200,11 +200,11 @@
           <li>
             <p>Métodos de pagamento</p>
           </li>
-          <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+          <li><i class="fa-brands fa-cc-visa fs-3"></i></li>
+          <li><i class="fa-brands fa-paypal fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-mastercard fs-3"></i></li>
+          <li><i class="fa-brands fa-pix fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-diners-club fs-3"></i></li>
         </ul>
       </div>
 
