--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -113,18 +113,18 @@
         <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
             <!--Metodos de pagamento-->
-            <div class="col-12 col-lg-4">
-                <ul class="payList">
-                    <li>
-                        <p>Métodos de pagamento</p>
-                    </li>
-                    <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
-                </ul>
-            </div>
+      <div class="col-12 col-lg-4">
+        <ul class="payList">
+          <li>
+            <p>Métodos de pagamento</p>
+          </li>
+          <li><i class="fa-brands fa-cc-visa fs-3"></i></li>
+          <li><i class="fa-brands fa-paypal fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-mastercard fs-3"></i></li>
+          <li><i class="fa-brands fa-pix fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-diners-club fs-3"></i></li>
+        </ul>
+      </div>
 
             <!--Contatos-->
             <div class="col-12 col-lg-4">
