--- a/src/template.html
+++ b/src/template.html
@@ -58,11 +58,11 @@
           <li>
             <p>Métodos de pagamento</p>
           </li>
-          <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-          <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+          <li><i class="fa-brands fa-cc-visa fs-3" style="color: #ffffff;"></i></li>
+          <li><i class="fa-brands fa-paypal fs-3" style="color: #ffffff;"></i></li>
+          <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #ffffff;"></i></li>
+          <li><i class="fa-brands fa-pix fs-3" style="color: #ffffff;"></i></li>
+          <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #ffffff;"></i></li>
         </ul>
       </div>
 
@@ -72,13 +72,13 @@
           <li>
             <p>Métodos de contato</p>
           </li>
-          <li><a href="#" class="info"><i class="fa-solid fa-map-location-dot" style="color: #ffffff;"></i> Rua C N°65
+          <li><a href="#" class="info"><i class="fa-solid fa-map-location-dot"></i> Rua C N°65
               Água Branca</a></li>
-          <li><a href="#" class="info"><i class="fa-brands fa-instagram fs-5" style="color: #ffffff;"></i>
+          <li><a href="#" class="info"><i class="fa-brands fa-instagram fs-5"></i>
               @LavaDrive</a></li>
-          <li><a href="#" class="info"><i class="fa-solid fa-phone" style="color: #ffffff;"></i> (31) 3392-1187</a>
+          <li><a href="#" class="info"><i class="fa-solid fa-phone"></i> (31) 3392-1187</a>
           </li>
-          <li><a href="#" class="info"><i class="fa-regular fa-envelope fs-5" style="color: #ffffff;"></i>
+          <li><a href="#" class="info"><i class="fa-regular fa-envelope fs-5"></i>
               lavadrive@gmail.com</a></li>
         </ul>
       </div>
