--- a/src/TrocarSenha.html
+++ b/src/TrocarSenha.html
@@ -2,41 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperação de Senha</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Recuperação de Senha</title>
 
-    <!--Style CSS-->
-    <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
-    <!--Bootstrap (CSS)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--FontAwesome-->
-    <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
-    <style>
-        .main-content {
-            padding: 3rem;
-            margin-top: 3rem;
-        }
+  <!--Style CSS-->
+  <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
+  <!--Bootstrap (CSS)-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!--FontAwesome-->
+  <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
+  <style>
+    .main-content {
+      padding: 3rem;
+      margin-top: 3rem;
+    }
 
-        .bordered-div {
-            border: 1px solid #ccc;
-            padding: 2rem;
-            border-radius: 5px;
-        }
+    .bordered-div {
+      border: 1px solid #ccc;
+      padding: 2rem;
+      border-radius: 5px;
+    }
 
-        @media (max-width: 576px) {
-            .main-content {
-                padding: 1.5rem;
-                margin-top: 1.5rem;
-            }
-        }
-    </style>
+    @media (max-width: 576px) {
+      .main-content {
+        padding: 1.5rem;
+        margin-top: 1.5rem;
+      }
+    }
+  </style>
 
 </head>
 
 <body>
-    
+
   <!--Cabecalho-->
   <header class="m-0 d-block bg-blue">
     <nav class="navbar">
@@ -48,11 +48,11 @@
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Inicial.html'">Início</button>
+            onclick="window.location.href = 'Inicial.html'">Início</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
           <button type="button" class="btn btn-outline-light"
-          onclick="window.location.href = 'Login.html'">Login</button>
+            onclick="window.location.href = 'Login.html'">Login</button>
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'Perfil.html'">Perfil</button>
         </div>
@@ -62,112 +62,108 @@
 
   </header>
 
-    <!--Conteudos-->
-    <main class="m-0 d-block main-content">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <h2 class="text-center">Alterar a Senha</h2>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col-md-6 bordered-div">
-                    <div class="text-center mb-4">
-                        <img src="img/AvatarPadrão.png" class="rounded-circle" style="width: 30%"
-                            alt="Imagem de perfil">
-                    </div>
-                    <form>
-                        <div class="form-group mb-3">
-                            <label for="email">Email:</label>
-                            <input type="email" class="form-control" id="email" placeholder="Digite seu email">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="old-password">Senha antiga:</label>
-                            <input type="password" class="form-control" id="old-password"
-                                placeholder="Digite sua senha antiga">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="new-password">Nova senha:</label>
-                            <input type="password" class="form-control" id="new-password"
-                                placeholder="Digite sua nova senha">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="confirm-password">Confirme a nova senha:</label>
-                            <input type="password" class="form-control" id="confirm-password"
-                                placeholder="Confirme sua nova senha">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Trocar Senha</button>
-                    </form>
-                </div>
-            </div>
+  <!--Conteudos-->
+  <main class="m-0 d-block main-content">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <h2 class="text-center">Alterar a Senha</h2>
         </div>
-    </main>
-
-
-    <!--Rodape-->
-    <footer class="m-0 p-0 d-block text-white container-fluid">
-
-        <div class="m-0 mt-2 container-fluid bg-blue text-center row">
-
-            <!--Metodos de pagamento-->
-            <div class="col-12 col-lg-4 ">
-                <ul class="payList">
-                    <li>
-                        <p>Métodos de pagamento</p>
-                    </li>
-                    <li><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
-                    <li><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
-                </ul>
+      </div>
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-6 bordered-div">
+          <div class="text-center mb-4">
+            <img src="img/AvatarPadrão.png" class="rounded-circle" style="width: 30%" alt="Imagem de perfil">
+          </div>
+          <form>
+            <div class="form-group mb-3">
+              <label for="email">Email:</label>
+              <input type="email" class="form-control" id="email" placeholder="Digite seu email">
             </div>
-
-            <!--Contatos-->
-            <div class="col-12 col-lg-4">
-                <ul class="payList">
-                    <li>
-                        <p>Métodos de contato</p>
-                    </li>
-                    <li><a href="#" class="info"><i class="fa-solid fa-map-location-dot" style="color: #ffffff;"></i>
-                            Rua C N°65
-                            Água Branca</a></li>
-                    <li><a href="#" class="info"><i class="fa-brands fa-instagram fs-5" style="color: #ffffff;"></i>
-                            @LavaDrive</a></li>
-                    <li><a href="#" class="info"><i class="fa-solid fa-phone" style="color: #ffffff;"></i> (31)
-                            3392-1187</a>
-                    </li>
-                    <li><a href="#" class="info"><i class="fa-regular fa-envelope fs-5" style="color: #ffffff;"></i>
-                            lavadrive@gmail.com</a></li>
-                </ul>
+            <div class="form-group mb-3">
+              <label for="old-password">Senha antiga:</label>
+              <input type="password" class="form-control" id="old-password" placeholder="Digite sua senha antiga">
             </div>
-
-            <!--Outros-->
-            <div class="col-12 col-lg-4">
-                <ul class="payList">
-                    <li>
-                        <p>Outros links úteis</p>
-                    </li>
-                    <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
-                    <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
-                    <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
-                    <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
-                </ul>
+            <div class="form-group mb-3">
+              <label for="new-password">Nova senha:</label>
+              <input type="password" class="form-control" id="new-password" placeholder="Digite sua nova senha">
             </div>
-
+            <div class="form-group mb-3">
+              <label for="confirm-password">Confirme a nova senha:</label>
+              <input type="password" class="form-control" id="confirm-password" placeholder="Confirme sua nova senha">
+            </div>
+            <button type="submit" class="btn btn-primary">Trocar Senha</button>
+          </form>
         </div>
+      </div>
+    </div>
+  </main>
 
-        <!--Copyright-->
-        <div class="m-0 container-fluid bg-darkBlue text-center row">
-            <p>Copyright LavaDrive 2023</p>
-        </div>
 
-    </footer>
+  <!--Rodape-->
+  <footer class="m-0 p-0 d-block text-white container-fluid">
 
-    <!--Bootstrap (Java)-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+    <div class="m-0 mt-2 container-fluid bg-blue text-center row">
+
+      <!--Metodos de pagamento-->
+      <div class="col-12 col-lg-4">
+        <ul class="payList">
+          <li>
+            <p>Métodos de pagamento</p>
+          </li>
+          <li><i class="fa-brands fa-cc-visa fs-3"></i></li>
+          <li><i class="fa-brands fa-paypal fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-mastercard fs-3"></i></li>
+          <li><i class="fa-brands fa-pix fs-3"></i></li>
+          <li><i class="fa-brands fa-cc-diners-club fs-3"></i></li>
+        </ul>
+      </div>
+
+      <!--Contatos-->
+      <div class="col-12 col-lg-4">
+        <ul class="payList">
+          <li>
+            <p>Métodos de contato</p>
+          </li>
+          <li><a href="#" class="info"><i class="fa-solid fa-map-location-dot" style="color: #ffffff;"></i>
+              Rua C N°65
+              Água Branca</a></li>
+          <li><a href="#" class="info"><i class="fa-brands fa-instagram fs-5" style="color: #ffffff;"></i>
+              @LavaDrive</a></li>
+          <li><a href="#" class="info"><i class="fa-solid fa-phone" style="color: #ffffff;"></i> (31)
+              3392-1187</a>
+          </li>
+          <li><a href="#" class="info"><i class="fa-regular fa-envelope fs-5" style="color: #ffffff;"></i>
+              lavadrive@gmail.com</a></li>
+        </ul>
+      </div>
+
+      <!--Outros-->
+      <div class="col-12 col-lg-4">
+        <ul class="payList">
+          <li>
+            <p>Outros links úteis</p>
+          </li>
+          <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+          <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!--Copyright-->
+    <div class="m-0 container-fluid bg-darkBlue text-center row">
+      <p>Copyright LavaDrive 2023</p>
+    </div>
+
+  </footer>
+
+  <!--Bootstrap (Java)-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
